-
Bug
-
Resolution: Done
-
P2: Important
-
5.5.0 Alpha, 5.7.0
-
ubuntu 13.04
qt5.5
When i used qt3d in qtcreator, there is a red wavy line under PhongMaterial, qtcreator can not recognize it, so i want to create a plugins.qmltypes for qt3d module.
Then i excuted the following command:
qmlplugindump -v -nonrelocatable Qt3D.Render 2.0 ~/proj/qt/qt5.5.0/qtbase/qml/ >> ./Render/plugins.qmltypes
Notes:
1) I had config the path of qmlplugindump
2) "~/proj/qt/qt5.5.0/qtbase/qml/" is the path of qml components
But i can not get the plugins.qmltypes, it reminders me:QQmlComponent: Component is not ready, To see the details by the attachment named qmlplugindump-log.txt