Don't crash when introspected by qmlplugindump

We delay the creation of the render aspect until we know we'll be in the
QQ scene graph. Creating the render aspect at construction time kicks
off too much of Qt3D for qmlplugindump sake.

Change-Id: I12f401c809eaf686721de4ae3acf12cf5b5688a6
Task-number: QTBUG-45661
Reviewed-by: Sean Harmer <sean.harmer@kdab.com>